--- a/content/podcast/3.5.md
+++ b/content/podcast/3.5.md
@@ -103,161 +103,109 @@ And I feel like, if I had learned it theory first, I'd just be like, "Okay, yeah
 
 And so I will say now, as a company founder, I don't really get to do that stuff, but I feel like it's based on those ideas.
 
-**Beyang:** When you graduated from undergrad, I feel like maybe a fork in the road for a lot of people is do you go and get a graduate degree and do research or do you go into industry?
+**Beyang:** When you graduated from undergrad, I feel like maybe a fork in the road for a lot of people is, do you go and get a graduate degree and do research or do you go into industry? At that point in your life, was there like a question in your mind or was it pretty straightforward?
 
-**Beyang:** What, at that point in your life, was there like a question in your mind or was it pretty straightforward?
+**Jean:** I had interned at Google the summer before my senior year—that was summer 2007. Google was very hot then—well, it's still very hard to get a job there. But it was like, not clear if you're graduating from a top school, if you could get a job there. I had a return offer from there, so like, my friends were like, "Oh my gosh, that's where you're gonna go." And at the same time I was like, "Okay, I've done a few internships in industry at this point, I don't know that that's what I wanna do, because I would be using state-of-the-art tools, but I feel like the tools could be better. So where could I work on that?" 
 
-**Jean:** Yeah, definitely. So I'm, I had internet Google this summer before my senior year. So that was summer 2007. Google was very hot, then it was, still it's still very hard to get a job there, but it was like, like not clear if you're graduating from a top school, if you could get a job there.
+And at the time, there were compilers you could work on. There was a company called Green Acres in Santa Barbara—they made compilers, I think like for defense, there were a few other places working in compilers at the time, but it was very far from the mainstream. The kind of dev tools they were working on was... One example of a project they finished the summer I was there was, they made distributed linking, so distcc. Because before that, linking was not distributed and it took, like, ten minutes to link any code! But, you know, I was like, "Okay, I think you can move the needle on compilation performance or, like, performance things, but anything semantically—like, having to do with programming tools of the kind that I wanted to do—there just really weren't opportunities for doing that in the industry at the time.
 
-**Jean:** I had a return offer from there. So I like, my friends were like, oh my gosh, that's where you were gonna go. And at the same time I was like, okay, I've done a few internships in industry at this point. I don't know that's what I wanna do because. I would be using state-of-the-art tools, but I feel like the tools could be better.
+And so to me, the question was, "Where can you go to get better at doing the kind of work that I wanted to do?" Which is new kinds of tools, better semantic tools for understanding software systems. I applied to grad school. At the time, I had deferred my Google offer to April or whenever the grad school decisions were.
 
-**Jean:** So where could I work on that? And at the time there were compilers you could work on. So there was a company called green acres in Santa Barbara. They made compilers, I think like for defense there were like a few other places working in compilers at the time, it was. Very far from the mainstream at places like Google they're working on like the kind of dove tools they were working on was one example of a project they finished the summer.
+So if anyone tuning in is, um, an undergrad, a lot of undergrads don't know this, but people make you offers and tell you, you have to tell them by October. You can defer them until whenever your actual decisions are. And at the time, I was like, "Google is a very valid option. It depends on what grad schools I get into."
 
-**Jean:** I was, there was, they made distributed, linking, so DCC. Cause before that, like linking was not distributed and it took 10 minutes to link any code . I. Okay. I think you can move the needle on like compilation performance or like performance things, but like anything semantically having to do with programming tools of the kind that I wanted to do there just really weren't opportunities for doing that in industry at the time.
+My undergrad advisor even said, "Look, there is a chance you may not get into the schools you want to, like, it's never a guarantee. You need to be prepared." Because I was like, "I'll go to grad school if I can get into the schools I want." And it wasn't a very big set, so I was prepared for all outcomes.
 
-**Jean:** And to me, the question was where can you go to get better at doing the. Work that I wanted to do, which is new kinds of tools, better semantic tools for understanding software systems and I applied to grad school at the time, I had deferred my Google offer to April or whenever the grad school decisions were.
+But then I ended up getting into some schools I wanted to, I visited them. I really liked MIT. And so that was the moment when I made the decision.
 
-**Jean:** So if anyone tuning in is I'm an undergrad, a lot of undergrads don't know this, but people make you offers and tell you, you have to tell them by October, you can defer them until whenever your actual decisions are. And at the time I was. So like Google is a very valid option. It depends on what grad schools I get into.
+**Beyang:** Yeah. I feel like, up until a couple years ago, there wasn't really a large developer-tool ecosystem either. Like, the main options, like you said, were those compiler companies.
 
-**Jean:** My undergrad advisor even said, look there is a chance you may not get into the schools you want to it's never a guarantee you need to be prepared. Cuz I was I'll go to grad school if I can get into the schools I want. And it wasn't a very big set. I was prepared for all outcomes.
+**Jean:** Yeah. There's really been a boom in funding in dev tools in the last few years and I've seen you've written about that. And I think the diversity of dev tools you can work on has also really expanded. But before, even in the bigger companies... So I will say, like, a couple years after I made the grad school versus not grad school decision, like Google, Microsoft—and Microsoft has always had pretty good dev tools actually—but anything that was not Microsoft, Google, Facebook started investing a lot more in dev tools, and then you saw startups joining in that game after that.
 
-**Jean:** But then I ended up getting into some schools I wanted to, I visited them. I really liked MIT. And so that, that was. The moment when I made the decision.
+**Beyang:** Yeah. Yeah. What did you get up to at MIT?
 
-**Beyang:** Yeah. I feel like in, in up until a couple years ago, there wasn't really a large like developer tool ecosystem either. The main options, like you said, were those kinda like compiler companies, which
+**Jean:** So during grad school, I created a new programming model and programming language. The language was called Jeeves. The programming model was called policy-agnostic programming. The main idea was that it factored out information flow and security access checks out of your code. So the general thing I was interested in was like, "I'm interested in removing boiler plate from code." At the time, I was still very interested in programming languages or the vehicle... Because I was like, "Okay, code is a mess." And so there's many ways you can go around cleaning up code. And at the time, my undergrad professors very much believed in the philosophy that better programming models and better programming languages are what it's going to take to clean up the mess of software that was out there. And so the premise is, if only we all use better languages, our lives would be better. 
 
-**Jean:** yeah.
+And in some sense, that's true. Like, you know, the mainstream has really shifted towards that in the last ten, fifteen years. So at the time I was like, "Okay, what's the next thing after memory management that would really clean things up?" And so I was, like, factoring access checks out of code—if you write any web program, like, half of your code is access checks and everyone gets them wrong. 
 
-**Jean:** Yeah. There's really been a boom in funding and dub tools in the last few years. And I've. Seen you've written about that. And I think the diversity of dev tools you can work on has also really expanded, but before, even in the bigger companies. So I will say like some, a couple years after I made the grad school versus not grad school decision, like Google, Microsoft, and Microsoft has always had pretty good dev tools actually, but anything that was not Microsoft, Google, Facebook started investing a lot more in depth.
+Something that's been cool to see since then is that there are a bunch of startups now, and there are a bunch of things that are like, let's factor this out as a module, as a library, as like all kinds of stuff. But at the time, I just really worked on, "Okay, semantically, what does it look like to factor this out?" (If you wanted to do information flow and not just access control.) So access control is like, "Here's a value. Let me protect it." Information flow is like, "Here's a value. Let me do computations based on the value."
 
-**Jean:** And yeah. And then, like you saw startups joining joining in that, that, that game after that.
+So let's say my location is secret. An information flow violation would be like, "Show me all users who are in the Bay Area right now." And if my location is secret, like, my location should not contribute to this count. So it was really like, "Let's take this to the next level. How do we track that?"
 
-**Beyang:** Yeah. Yeah. Cool. What did you get up to at
+I came to some interesting conclusions while working on this, because I was like, "Okay, cool. This is great as a theoretical model, this is how you would do it." Other people have told me, "I've read your thesis. It influenced how I implemented this library." And I've been like, "Great."
 
-**Jean:** MIT? So during grad school, I was I created a new programming model and programming language. The language was called JS. The programming model was called policy agnostic programming.
+But for me, I was like, "Okay, I want to clean up actual code in real life." And so I started implementing a domain-specific language based on my language. And I started building web apps based on it, because that's been my goal of who I wanna help, what kind of apps I wanna help the whole time.
 
-**Jean:** The main idea was it factored out information flow and security access checks out of your code? So the general thing I was interested in was like, Hey I'm interested in removing boiler plate from code at the time. Still very interested in programming languages are the vehicle. Cause I was like, okay, code is a mess.
+And I discovered something which is... in web apps, most of the code is in application code: it's application database code, it's your ORM code, you call it to the database. And I said to myself, "Oh shoot. That was outside of what I was modeling in my application language." And so this is where the illusion broke for me: That any kind of language-level guarantees really solve all of your problems, because that was when I started realizing just the, the sheer scale of software heterogeneity. Because even in a simple model-view controller web app, you have your model, you have your view, and you have your controller. That's three heterogeneous runtimes. It's three heterogeneous languages. There's no way you could... well, you could have a single one, but that's just so unlikely.
 
-**Jean:** And so there's many ways you can go around cleaning up code. And at the time, my undergrad professors were very much believed in the philosophy that better programming models and better programming languages are what it's going to take to clean up the mess of software that was out there.
+And so that was where I started thinking about, "Oh shoot, anytime you do anything in one of these web systems, you're calling outside of your language." And so if you're coming from the "We're doing this for the guarantees"... If you have a completely closed system, like a spaceship or like an operating system or something like that, you can verify something down to the bare metal, and I think Amazon does a lot of this, like, hypervisor kernel, like, verification stuff. But anything web, you're just kinda screwed. Like, you have so many parts, they're all running in different runtimes. It's worse than running in different languages, because if you have any kind of managed runtime—and, like, any database has a pretty substantial runtime—like, you just have so many components and it's really about, like, your interacting components... is what I realize at that point. 
 
-**Jean:** And so the premise is if only we all use better languages, our lives would be better. And in some sense, that's true. The mainstream has really shifted towards that in. 10, 15 years. So at the time I was like, okay what's the next thing? After memory management that would really clean things up.
+And so to answer the question, What did I get up to in grad school? I made a new programming language. And what did I learn from that? No programming language is gonna save you! There's too many parts.
 
-**Jean:** And so I was like factoring access checks out of code. If you write any web program, like half of your code is access checks and everyone gets them wrong. And so I'm. Something that's been cool to see since then is there are a bunch of startups now, and there are a bunch of things that are like, let's factor this out as a module, as a library, as like all kinds of stuff.
+**Beyang:** Interesting. Interesting. Was that, like, a gradual realization or was it a sudden epiphany? Do you remember?
 
-**Jean:** But at the time I just like really worked on okay, semantically, what does it look like to factor this out? If you wanted to do information flow and not just access control. So access control is here's a value. Let me protect it. Information flows. Like here's a value. Let me do computations based on the value.
+**Jean:** There was a sudden realization, but I was also very deep in it. Because it was... my first paper was, "I made this new programming language." And then I went to my advisor three quarters of the way through and I was like, "Hey, I figured out the problem: Every time I call it to the database, it actually subverts my guarantees." And he is "Oh, that's great. You have your next paper." And so then, I wrote that next paper, and I think that it was during the process of publishing that next paper that I realized that this was a bigger problem, because I spent something like three, four years convincing people that this should be a paper.
 
-**Jean:** So let's say my location is secret. A like information flow violation would be like, show me all users who are in the bay area right now. And if my location is secret, like my location should not contribute to this count. So it was really like, let's take this to the next level. How do we track that?
+There were a few snags. So one was, most ways of modeling programming languages only model one. So how do you actually model, like, a programming model? So you have lambda calculus, right? But how do you actually model lambda calculus with a SQL database inside? There were actually like, no way... not really many clean ways that I had seen of doing that before. So like, how do you model that in the formal programming languages way? That was like a huge challenge. And then once even we did that, people were like, "Why would you ever do that? You already have your paper about your language. Like, you're done." 
 
-**Jean:** And I I came to some interesting conclusions while working on this because I was like, okay, cool. This is great. As a theoretical model, this is how you would do it. Other people have told me, I've read your thesis. That influenced how I implemented this library and I've been like, great.
+And I guess I realized a few things from that. Like, most of the language-modeling community was really not focused on this cross-language thing. Cross-language is super-messy. It took us, like, two years to really figure out how to get the modeling of the language plus the database, right? And I was like, "Man, there's not that many people thinking about this in a principled way and everyone is just doing it."
 
-**Jean:** But for me, I was like, okay, I wanna clean up actual code in real life. And so I started implementing a domain specific language based on the thing based on my language. And I started building web apps based on it, because that's been my goal of who I wanna help, what kind of apps I wanna help the whole time.
+And so it was... there was the initial realization, and then "Where to best do that work?" was a series of gradual—not even realizations, but trying to do things and getting thwarted and in various ways.
 
-**Jean:** And I discovered something which is in web apps. Most of the code is in application code it's application database code. It's your ORM code. You call it to the database and. I said to myself, oh shoot. That was outside of what I was modeling in my application language . And so this is where the illusion broke for me that any kind of language level guarantees really solve all of your problems because I real, that was when I started realizing just the, this sheer scale of software heterogeneity.
+**Beyang:** So, when you graduated and became a professor, was that kind of thinking top of mind for you? Did that inform the research direction you picked?
 
-**Jean:** Because even in a simple model view controller, web app, you have your you have your model, you have your view and you have your controller. That's three heterogeneous run times. It's three heterogeneous languages. There's no way you could you could have a single one, but that's just so unlikely.
+**Jean:** Yeah, absolutely. At the time, I knew that probably at some point, I would want to build the kind of tools I wanted to build in the industry, because I was hitting these edges of what you could do theoretically in academia. But again, at the time—so I was finishing grad school in 2015... at the time, I would say this was before dev-tool startups really took off—the major players were still Microsoft, Facebook, Google, a few other places, and the name of the game at all those places was scale. And so if you had a small PHP or Python extension that could check all of the code at one of these large companies, you could build it. And everything else had a lot of trouble.
 
-**Jean:** And so that was where I started thinking about, oh shoot, anytime you do anything in one of these web systems, you're calling outside of your language. And so if you're coming from. We're doing this for the guarantees. If you have a completely closed system, like a spaceship or like an operating system or something like that, you can verify something down to the bare metal.
+**Beyang:** Got it. Got it. So, seeing that you went into becoming a professor to see if you could drive research...
 
-**Jean:** And I think, Amazon does a lot of this like hypervisor kernel, like verification stuff. But anything web you're just screwed. Like you have so many parts, they're all running in different run times. It's worse than running in different languages, because if you have any kind of managed run time and like any database has a pretty substantial run time.
+**Jean:** Yeah, so I felt like, "The kind of problems I wanna work on, academia is still the best place. I'll take some time here, work out my ideas." I really didn't think it would happen so quickly that the landscape shifted in startups. Yeah, I think it was really like, I feel like 2013, 2014 you started seeing it, but, like, most of the shift happened post-2015.
 
-**Jean:** Like you just have so many components and it's really about like your interacting components is what I realize at that point. And so to answer the question, what did I get up to in grad school? I made a new programming language and what did I learn from that? And no programming language is gonna save you.
+**Beyang:** Yeah, I can definitely confirm that. Like, Sourcegraph got started in 2013. And in those days, if you said the words "developer tool" to investors... 
 
-**Jean:** There's too many parts.
+**Jean:** Oh my gosh, yeah!
 
-**Beyang:** Interesting. Interesting. Was that like a gradual realization or was it a sudden epiphany? Do you remember?
+**Beyang:** ...they pick up their bags and run the opposite direction! 
 
-**Jean:** There was a sudden realization, but I was also very deep in it because it was, my first paper was I made this new programming language and then I went to my advisor three quarters of the way through and I was like, Hey I figured out.
+**Jean:** It was not hot, yeah.
 
-**Jean:** Problem every time I call it to the database, it actually subverts my guarantees and he is oh, that's great. You have your next paper. . And so then, I wrote that next paper and I think that it was during the process of publishing that next paper that I realized that this was a bigger problem because I spent something like three, four years convincing people that this should be a paper.
+**Beyang:** But yeah, fast forward to now, it's one of the hottest areas and for good reason. I feel like a couple big inflection points or milestones, I guess, you know, the GitHub of acquisition by Microsoft, and then you had companies like GitLab and Datadog come along, and just a lot more companies like that, that proved this model. Like, "Hey, more organizations are building software, and guess what? They all care about developer productivity, they all care about tooling." And a lot of these problems are actually, like, common across organizations.
 
-**Jean:** Cause there were a few snags. So one was. Most ways of modeling programming languages only model one. So how do you actually model like a programming model? So you have Lambda calculus, but how do you actually model like Lambda calculus with a sequel database inside? There were actually like, no way not really many clean ways that I had seen of doing that before.
+**Jean:** Yeah. Yeah, absolutely. And I think that something that's been interesting to see is... I keep on calling out Microsoft, because Microsoft has been doing this all along! And I feel like, also something shifted around the time Microsoft actually started doing less of it. So like, a lot of the Microsoft people went to Google, went to Facebook, and, like, it started getting spread around.
 
-**Jean:** So like, how do you model. In the formal programming languages way was like a huge challenge. And then once even we did that, people were like, why would you ever do that? You already have your paper about your language, like you're done. Yeah. And I guess I realized a few things from that.
+**Beyang:** You know, it's interesting. I think of Microsoft as really the original dev-tooling company.
 
-**Jean:** But most of the like language modeling community was really not focused on this cross language thing. Cross language is super messy. It took us, like two years to really figure out how to get the modeling of the language plus the database. And. I was like, man, there's not that many people thinking about this in a principled way and everyone is just doing it.
+**Jean:** Oh, absolutely. Yeah.
 
-**Jean:** And so it, it was, there was the initial realization and then where to best do that work was a series of gradual, not even realizations, but trying to do things and getting thwarted and in various.
+**Beyang:** Like, nineties-era Microsoft, people always think of, like, the antitrust, like competing hard with Apple. But I really think that, the reason that Windows won, a big factor of it in the nineties, was because they built... they prioritized the developer experience. They had this wonderful vertical suite of tools.
 
-**Beyang:** When you graduated and became a professor, was that kind of thinking top of mind for you?
+**Jean:** Yep, yep. I completely agree. And they hired a lot of the OG developer-tools people. I think, DevDev at Microsoft still continues to do some of the best developer-experience work.
 
-**Beyang:** Did that inform like the research direction you picked?
+**Beyang:** It's kinda interesting too, because I feel like that was maybe the playbook for maybe, like, "Tech version 1". Because in those days, you didn't really have a... like, there was no internet, there was no open ecosystem, and so the way to win was to make your platform the most appealing for third-party developers to build on. That's how you got the kind of coverage of all the applications that your customers wanted to do on top of your operating system. And in some ways, like, it's still true to a certain extent. You do still have vertically-integrated, walled-garden ecosystems in tech today. And that is a priority, to prioritize developer experience for the companies that own those ecosystems. But today we also have the web and the entire open-source ecosystem. And in some sense, like, the developer-tool-startup ecosystem that's popped up in recent years is kinda complimentary to that situation.
 
-**Jean:** Yeah, absolutely. I, at the time I knew that. Probably at some point I would want to build the kind of tools I wanted to build in industry because I was hitting these edges of what you could do theoretically in academia, but again at the time.
+**Jean:** Yeah. Yeah. It's been super interesting to watch. And I think that no dust has settled yet, which makes it very fun. Like, anyone who tries to say the dust is settling... it's just not true. 
 
-**Jean:** So I was finishing grad school in 2015. At the time I would say this was before dev tool startups really took off. You still, the major players were still Microsoft, Facebook, Google. A few other places and the name of the game and all those places was scale. And so if you had a small PHP or Python extension that could check all of the code at one of these large companies, you could build it and everything else had a lot of trouble.
+**Beyang:** Yeah. We're still early days. It's the wild west. It's really fun outside.
 
-**Beyang:** got it. Got it. So seeing that you went into becoming a professor to see if you could drive
+**Jean:** Yep. Yep. Yep. Yeah. And something that's really cool to me is, I went into this—and I presume you went into this too—because you saw that the developer experience was just so bad.
 
-**Jean:** research. Yeah, so I felt the kind of problems I wanna work on academia is still the best place. I will take some time here, work outta my ideas. I really didn't think it would happen so quickly that the landscape shifted in in startup.
+**Beyang:** As you were going into starting as a professor at CMU, was this all top of mind or did it inform your research area?
 
-**Jean:** Yeah, I think it was really like, I feel like 20 13, 20 14, you started seeing it, but it like most of the shift happened post 2015.
+**Jean:** The ecosystem changes themselves weren't top of mind. I wasn't like, "I wanna capitalize on the ecosystem." To me, I was still trying to get at "Web programming needs to be easier. It needs to be easier for developers to wrangle the mess of code they get. Everything feels tangled up. How can I make it better?" And so to me the question was always, "How can I improve the state of web programming today?" And not so much, "What's the right time to do this kind of thing?" And to me, I thought we were many more years out from me being able to do the kind of work that we're doing at Akita now.
 
-**Beyang:** I can definitely confirm that like source craft got started in 2013. In those days, if you said the words, developer tool to investor, they like pick up their bags and run the opposite direction.
+It helped that I realized that what we should really be doing is working on better better tools for telling developers what's going on, instead of better tools for helping developers do something new. I think a lot of the work in academic programming languages, and a lot of the work from people who make programming languages for fun, or work coming out of labs, or these these design collectives... a lot of them about, you know, "Here's a fun way to write more code." But to me throughout the whole time really, I was working on programming tools. The bigger problem is, What do people do with the code they've already written?
 
-**Jean:** It was not hot. Yeah.
+And that was a big part of why I was really interested in, "Here's how we add a new dimension to code." Like, my whole PhD thesis was motivated by, "If you've written some code and you wanna add some policy to some data, it is hell right now, because you have to go in and thread all that through. What if you could decouple it?"
 
-**Beyang:** But yeah, fast forward to now, it's one of those, the hottest areas and for good reason I feel couple like big inflection points or milestones, the Git of acquisition by Microsoft. And then you had companies like GitLab and Datadog come along and just a lot more like companies like that, that prove at this model Hey, like more organizations are building software.
+The overarching theme for that is, if you have some code and you wanna do anything different to it—whether it's add a new feature, whether it's make a change that threads throughout, whether it's add instrumentation for some kind of monitoring and observability that you need to thread throughout—it is a really big pain right now to do anything with code you have existing. And I feel like that's a big motivation for what you guys at Sourcegraph do, it's a really big motivation for what we at Akita do. 
 
-**Beyang:** And guess what they all care about developer productivity, they all care about tooling. And a lot of these problems are actually like common across organizations.
+The legacy code problem was a very big one, the heterogeneity of code was a very big one. And so I was just going after, chipping at these problems in ways that I thought were potentially the most medium-term impactful. And what I mean by medium-term impactful is, it was not necessarily, "This is something we can do today." That's luxury of the fact that I was in academia. 
 
-**Jean:** Yeah. Yeah, absolutely. And I think that something that's been interesting to see is I keep on calling out Microsoft. Does Microsoft has been doing this all along?
+To me also, if you're working on developer experience, ten, fifteen years out makes no sense. Like, back before... I feel like, in the seventies, you could be like, theoretically developers will exist one day and I can make all these programming models. And it's great, because now we've picked up a lot of the ideas from the seventies. But everything that's happening now, it's like, what is going to win in the next five years determines what are the big problems to work on in the next ten years. To me, a lot of long-term work in this space didn't make a lot of sense for me for that reason.
 
-**Jean:** Yeah. Yeah. And I feel like also something shifted where that was around the time Microsoft actually started doing less. Yeah. And so a lot, like a lot of the Microsoft people went to Google, went to Facebook and like it started getting spread around.
+**Beyang:** Makes sense. At what point... was there, like, a catalyst that made you take the leap from academia into starting a startup or was that just a natural progression of your work?
 
-**Beyang:** Y it's interesting. I think of Microsoft as really the original dev tooling company.
+**Jean:** I looked around, I looked at what was happening in the space, I looked at the needs of people. I feel as an academic program languages person, I was on the very practical end of trying to stay in touch with developers. I would do my tour of Silicon valley companies about once a year and just check things out, figure out what people are up to. There are many more-existential questions you have as an academic working on something that's trying to be useful to the like, to industry because you really... I pretty regularly ask myself is still, "Is this the right thing to be doing? Is this the right place to be doing this thing?" And when I asked myself these questions, I realized the thing I wanna be doing is slightly different and the place to do it is by starting a company. 
 
-**Beyang:** Oh mean, absolutely. Yeah. Like nineties there, Microsoft the people always think of like the antitrust like competing hard with apple. But I really think that, the reason that windows won a big factor of it in the nineties was because they built, they prioritized the developer experience.
-
-**Beyang:** They had this like wonderful vertical suite of tools. Yep,
-
-**Jean:** yep. Yeah. I completely agree. And they hired a lot of the OG developer tools, people, I think, dev at Microsoft still continues to do some of the best developer experience
-
-**Beyang:** work. It's interesting too, because I feel like that was maybe the playbook for maybe like tech version one, cuz in those days you didn't really have a, there was no internet, there was no open ecosystem.
-
-**Beyang:** And so the way to win was to, make your platform the most appealing for third party developers to build on that's how you got, kind of coverage of all the applications that your customers wanted to do on top of your operating system. And in, in some ways like, It's still true to a certain extent you do still have vertically integrated walled garden ecosystems in tech today.
-
-**Beyang:** And that is a priority to prioritize developer experience for those, for the companies that own those ecosystems. But today we also have the web and the entire open source ecosystem. And in some sense, like the developer tool startup ecosystem that's popped up in recent years is complimentary to that.
-
-**Beyang:** Situation.
-
-**Jean:** Yeah. Yeah. It's been super interesting to watch and I think that no dust is settled yet, which makes it very fun. like anyone who tries to say the dust is settling, is just not true. Yeah. We're
-
-**Beyang:** still early days. It's the wild west. It's really fun outside.
-
-**Jean:** Yep. Yep. Yep. Yeah. And something that's really cool to me is I went into this and, I presume you went into this too, because you saw that developer experience was just so
-
-**Beyang:** bad as you were going into starting as a professor at CMU was this all top of mind or, did it inform your research area?
-
-**Jean:** The ecosystem changes themselves. Weren't top of mind. I wasn't like, I wanna capitalize on the ecosystem to me. I was like, Still trying to get at web programming needs to be easier. It needs to be easier for developers to wrangle the mess of code they get. Everything feels tangled up. How can I make it better?
-
-**Jean:** And so to me, the question was always how can I improve the state of web programming today? And not so much, what's the right time to do this kind of thing. And to me I thought we were many more years out from me being able to do the kind of work that we're doing at Akita now.
-
-**Jean:** I think it, it helped. It helped that I realized that what we should really be doing is working on better better tools for telling developers what's going on instead of better tools for helping developers do something new. I think a lot of the work in academic programming languages and a lot of the work in people who make programming languages for fun or.
-
-**Jean:** Work coming out of labs or these these design collectives there are a lot of them are about, here's a fun way to write more code, but to me throughout the. Whole time. Really? I was working on programming tools. The bigger problem is what do people do, what the code they've already written.
-
-**Jean:** And that was a big part of why I was really interested in here's how we add a new dimension to code. Like my whole PhD thesis was motivated by if you've written some code and you wanna add some policy to some data. It is hell right now, because you have to go in and thread all that through what, if you could decouple it.
-
-**Jean:** And the overarching theme for that is if you have some code and you wanna do anything different to it, whether it's add a new feature, whether it's make a change that threads throughout, whether it's add instrumentation for some kind of monitoring and observability that you need to thread throughout, it is a really.
-
-**Jean:** Pain right now to do anything with with code you, you have existing. And I feel like that's a big motivation for what you guys at source graph do. It's a really big motivation for what we at Akita do. And to me, the. The legacy code problem was a very big one. The heterogeneity of code was a very big one.
-
-**Jean:** And so I was just going after chipping at these problems in ways that I thought were potentially the most medium term impactful. And what I mean by medium term impactful, it was not necessarily, this is something we can do today. That's luxury of the fact that I was in academia. And to me also, if you're working on developer experience, 10, 15 years out makes no sense, like back before, like I feel like in the seventies could be different world then.
-
-**Jean:** Yeah. Yeah. In the seventies you could be like, theoretically developers will exist one day and I can make all these programming models. And it's great because now we've picked up a lot of the ideas from the seventies. But everything that's happening now. It's like what, what is going to win in the next five years?
-
-**Jean:** Determines what are the big problems to work on in the next 10 years? And so I'm, to me, a lot of like long term work in this space, doesn't, didn't make a lot of sense for me for that reason.
-
-**Beyang:** Makes sense at what point was there like a catalyst that made you take the leap from academia into starting a startup?
-
-**Beyang:** Or was that just a natural progression of
-
-**Jean:** your work? I looked around, I looked at what was happening in the space. I looked at the needs of people. I feel as an academic program languages person, I was on the very practical end of trying to stay in touch with developers. I would do my tour of Silicon valley companies.
-
-**Jean:** To year and just check things out, figure out what people are up to. And I feel like, I there are many more existential questions you have as an academic working on something. That's trying to be useful to the like, to industry because you really I pretty regularly ask myself is still, is this the right thing to be doing?
-
-**Jean:** Is this the right place to be doing this thing? And When I ask myself those questions, I realize the thing I wanna be doing is slightly different. And the place to do it is by starting a company. And I wasn't sure at the time I actually, I talked to people at Facebook. I talked to people at Google.
-
-**Jean:** I think that. If there's certain kind of problems you wanna solve and the places that might let you solve 'em are dynamically changing every year. It's always good to reevaluate.
+And I wasn't sure at the time actually. I talked to people at Facebook, I talked to people at Google, and I think that, if there's certain kind of problems you wanna solve and the places that might let you solve them are dynamically changing every year, it's always good to reevaluate.
 
 **Beyang:** Yeah. What was the inception of a Akita? Did you have a working group or a brain trust or like a co-founder that you started out with?
 
